[gd_scene load_steps=3 format=3 uid="uid://c0g3ogsavo5tf"]

[ext_resource type="Script" path="res://effect_space.gd" id="1_od006"]
[ext_resource type="Script" path="res://EffectSpaceDrop.gd" id="2_rovst"]

[node name="EffectSpace" type="MarginContainer"]
custom_minimum_size = Vector2(0, 30)
offset_right = 170.0
offset_bottom = 55.0
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("1_od006")

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(0.188235, 0.188235, 0.188235, 1)
antialiased = true
polygon = PackedVector2Array(0, 0, 15, 0, 25, -10, 45, -10, 55, 0, 187, 0, 187, 37, 55, 37, 49, 31, 24, 31, 17, 37, 0, 37)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Effects" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="EmptySpace" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 60
script = ExtResource("2_rovst")

[node name="Polygon2D" type="Polygon2D" parent="VBoxContainer/EmptySpace"]
color = Color(0.188235, 0.188235, 0.188235, 1)
antialiased = true
polygon = PackedVector2Array(0, 0, 15, 0, 25, -10, 45, -10, 55, 0, 180, 0, 180, 23, 55, 23, 45, 13, 25, 13, 15, 23, 0, 23)

[node name="Label" type="Label" parent="VBoxContainer/EmptySpace"]
layout_mode = 2
size_flags_vertical = 1
size_flags_stretch_ratio = 0.0
text = "Drop effects"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/EmptySpace"]
layout_mode = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 5

[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="child_entered_tree" from="VBoxContainer/Effects" to="." method="_on_effects_child_entered_tree"]
[connection signal="child_exiting_tree" from="VBoxContainer/Effects" to="." method="_on_effects_child_exiting_tree"]
